--- a/LanguageLearningPro/app/src/main/AndroidManifest.xml
+++ b/LanguageLearningPro/app/src/main/AndroidManifest.xml
@@ -37,6 +37,13 @@
             android:name=".ExerciseActivity"/>
         <activity
             android:name=".ProgressDashboardActivity"/>
+        <activity
+            android:name=".PostDetailActivity"/>
+        <activity
+            android:name=".ForumHomeActivity"/>
+        <activity
+            android:name="ForumCategoryActivity"/>
+
 
     </application>
 
