--- a/LanguageLearningPro/app/src/main/AndroidManifest.xml
+++ b/LanguageLearningPro/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.LanguageLearningPro"
         tools:targetApi="31">
         <activity
+            android:name=".UserLandingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CompletedExerciseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CurrentExercise"
+            android:exported="false" />
+        <activity
+            android:name=".CurrentLessonActivity"
+            android:exported="false" />
+        <activity
             android:name=".ForgotPassword"
             android:exported="false" />
         <activity
